--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ db.sqlite3
 db.sqlite3-journal
 media/photo/2chan.jpg
 media/photo/pfp.jpg
+media/salary_slip/
+media/aadhaar_card/
+media/pan_card/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
